--- a/manuscript/09.md
+++ b/manuscript/09.md
@@ -1,3 +1,35 @@
-# Chapter IX - The Funeral
+# Chapter IX 
 
-A blustery western wind smelt of ozone and snow 
+*** BORING FOR BUCOND +41 alackout, Arnhem Dot 18, 20R9 Pretty Dorehard to go about once the real business when you've been left out in the cold et111 funior ineide at the folly, yon the folly, the fugue, the Houtrakkers and that wispy imp Tako, in partioular, had loft her in.
+
+She recalled the expectant evening, hustling into the Gold War bomb shelter under the 'Pjord! community center.
+
+She had been mortified - she'd brought all her friends, vague acquaintances, even some groupies, roadies and buskers.
+
+The worst was Molly's look of derision and worst of all, pity.
+
+Even Baako had slipped away unseen when he saw the chance/had half a chance.
+
+The stage had hummed with 50Hz, every breath was about to tilt it into bashee style eardrum-shattering feedback whines.
+
+Primed like a grenade, the sound engineer had rustled up all the vacuum tubes, condenser mikes and guitar footpedals like Jimi Hendrix would have been proud of - he'd had to nick the juice from the daycare center just to fuel the 1960s pedal by EHX Electric Lady.
+
+Too had the little muppets would have tepid chestnut milk tomorrow.
+
+No doubt enough cause for the authorities to launch an investigation, uncover hacking, blame it on spies in the PTA, close the centre for weeks, have the muppets wander the streets nicking and begging straight out of Dickens.
+
+Benevolent side-mission accomplished.
+
+Because the brainwashing they were getting was no joke - fending for themselves and mucking about in the streets, playing paddle-ball and mock trenchwarfare and getting scabby knees and falling out of trees and burning cats' tails were a breath of fresh air in the stifling straitjacket that was the daycare center, the harbager of zombie model citizens.
+
+The risks she'd taken, holing up in the broom closet of the daycare center with Molly (her niece worked there, and was unabashedly naive, so when Molly said she needed to pracice her broomsweeping for the local contest, she bought it and let us stay, giving us the code of the alerm box as well.
+
+The code to which we had already surmised, was the birthday of our exalted leader, Dustin.
+
+They stole some of the protein bars ("only55 % insect, 45% labgrown goodness") that were reserved for the young tikes.
+
+God they were good. if a bit crunchy. the locust harvest had been particularly bumper crop in Chinese South-West Africa.
+
+The stolen kisses in the closet, a bit cloying. and a lemony smell due to the detergents being stored there, were thebest. whilst they waited for the curfew, and the dark.
+
+Alot better than playing tic tac toe, as she might have done in a more Jolitary age. *** ~ 
