Fix typos and enhance clarity in Chapter I
Corrected minor typographical errors and improved clarity in the text.

--- a/manuscript/01.md
+++ b/manuscript/01.md
@@ -1,11 +1,14 @@
 # Chapter I - The Mistakes
 
 The mistakes didn't show up right away. Their endemic nature only became apparent when it was far too late. That's the thing isn’t it, about mistakes: they're always presumed to be incidents. And yet when they're not - then what? 
+
 A mis-take: implies that one can try again, do a retake, that one can recover from it, like a misstep. It implies that it can be fixed, the mis-take. 
 
 How untrue that assumption proved to be, when we thought all was still swell, only last year blithely unaware. We were too weak to see the signals. And had we, we were too weak ourselves to give off signals to stop them. That’s how wrung-out we had become. 
 
-Before we divulge more salient facts and gory details of the enfolding cataclysm, consider the exponential - or logarithmic effects (I'm a writer, not a mathematician) when mistakes start interacting. Clusterfuck does not begin to describe it. This clusterfuck was of the sneaky kind. It crept up on you with a long incubation time, like that of a virus. However unfair this might seem to us humans, let’s not forget viruses are not encumbered with any sense of morality. 
+Before we divulge more salient facts and gory details of the enfolding cataclysm, consider the exponential - or logarithmic effects (I'm a writer, not a mathematician) when mistakes start interacting. 
+
+Clusterfuck does not begin to describe it. This clusterfuck was of the sneaky kind. It crept up on you with a long incubation time, like that of a virus. However unfair this might seem to us humans, let’s not forget viruses are not encumbered with any sense of morality. 
 
 Alright, so what about the clusterfuck, you ask? It was the machines. They were powerful, the machines.
 
@@ -17,13 +20,13 @@ Our signals were weak.
 
 ##                                         ~ * ~
 
-Dora took the train that fatal, cataclysmic, cold winter morning because she had the most prosaic hangover. Her breakfast consisted of two paracetamol tablets and a slugged-down quarter-litre of milk that was more or less off, depending on how much notice you'd take of the clamouring of your tastebuds. 
+Dora took the train that fatal, cataclysmic, cold winter morning because she had the most prosaic hangover. Her breakfast consisted of two paracetamol tablets and a slugged-down quarter-liter of milk that was more or less off, depending on how much notice you'd take of the clamouring of your tastebuds. 
 
 Why milk, you ask? Well, she was Dutch, and it was her patriotic duty to save the world from the "milk lake" that would inundate the world, and destroy the economy, or whatever, at least, that was the drill in the eighties. She also just liked the taste. And she placebo'ed her stomach into thinking that the clockwise oscillations of the stuff that came out of a semi-tortured or at the least, gaslighted cow, would counteract the high-strung counterclockwise machinations of her upset gastric system.
 
 Normally she would have taken a ride with her colleague Erwin, who had a Burmese EV that was actually charged every morning. She couldn't remember to charge her toothbrush; and more often than not, her fridge was out of juice too. Hence the penchant for items that were on the winding road to fermentation - that, or starvation. Well, let’s not exaggerate, malnutrition at worst. The party last night at her house had been a blast, but the icepicks thudding into her brain were finally losing their oomph.
 
-“Thank God for PCM,” she thought shivering on platform 3, which could more aptly have been named "Blasted Wind-tunnel" with the icy easterly Siberian wind frosting her eyebrows. Huddling between the other commuters like Emperor penguins, she tried aligning to the placement of the 2nd class carriage, aiming to scoot in and leg it through to the 3rd class compartment ahead of the other penguins, the lemmings.
+“Thank God for PCM,” she thought, shivering on platform 3, which could more aptly have been named "Blasted Wind-tunnel" with the bone-chilling Siberian wind frosting her eyebrows. Huddling between the other commuters like Emperor penguins, she tried aligning to the placement of the 2nd class carriage, aiming to scoot in and leg it through to the 3rd class compartment ahead of the other penguins.
 
 Scuttling more like the roach from Kafka than a noble denizen of the Antarctic, she elbowed her not so ladylike way into the musty and dimly lit corridor: delving right down into its stuffy maw. The puddles on the tired lino in the hallway of the SubT carried the oily reflections of the sallow faces of the commuters; none of whom had important or mysterious work to look forward to. A slog, something to avoid getting a Neg Point for, some warm gruel for midday, grog with it if you were in the higher echelons or someone's relative, or in their Fief, but that was about the max of it.
 
