UNFINISHED - Refactor Chapter III for clarity and coherence
Revised text for clarity and flow, enhancing the narrative while maintaining core themes. Adjusted several sentences for improved readability and coherence.

--- a/manuscript/03.md
+++ b/manuscript/03.md
@@ -1,20 +1,35 @@
+
 # Chapter III - The Cove
 
 The machines.
 
-Dora had never been a Luddite; quite the contrary. She embraced AI, vlogging 10-20 hours a week (a clunky satire on Tamagochis) the second it became free of charge (never mind the incessant product placement) but something was off. Round about 2026, the happy chappy chirpiness exuded by all those who contacted it, whether their bank accounts were glutted with too many zeroes or just poor punters, the witless adoption bothered her like an itchy rash. 
+Dora had never been a Luddite; quite the contrary. She embraced AI the second it became free of charge (never mind the incessant product placement). Vlogging 10-20 hours a week (a clunky satire on Tamagochis) and harvesting swathes of followers and a reputation - yet her enjoyment was skin-deep - something was off. About twelve months before, happy chappy chirpiness had been exuded by all those who contracted AI: whether their bank accounts were glutted with too many zeroes or just poor punters. It was the witless rubbernecking that bothered her. It made her old elbow fracture ache. 
 
-Sure it was mind-bogglingly fast, sure it was convenient, of course the wife bots were a hit with the incels and good riddance to them all, sure it cut through the bloated vapidity the internet had become. Yet...
+Brace yourself, winter is coming. 
 
-The hallucinations the AI bots regurgitated were certainly real (pun intended), largely due to the fact that the robots had no inkling, no vestige of reality, no proprioception, no feedback loop into reality. The human could think it could handle a hot pan, yet the pain felt would indicate that he was wrong and had to adjust its assumptions. The automaton would have to glean that feedback from wallows of junk on the internet; fact indistinguishable from myth or Marvel. 
+Sure AI was mind-bogglingly fast, sure it was convenient, sure the wife bots were a hit with the incels and good riddance to them all, of course it cut through the vapid bloatware the internet had become. Yet...
 
-Of course, the AI-missionaries would account for every vagary or glitch with an addition to the convoluted rule books and principles to govern the automatons. After seventy-odd years these were entirely indistinguishable from the nimble three rules of Asimov. 
+<!-- Rewrite all this; she's making Tamagotchis to elevate this fact. To shut her up, she's given the job in the Ministry. She has to take the job on condition that she stop with the vlogging. 
 
-Fresh out of her literature M.A. she was assigned a semi-permanent work order in the dept. Of A, D, C & F for her (feigned) assiduousness, where the irony of the kinship the bulking AI rule-books had with the Byzantine law and bylaw-books of the dept: inscrutable and obfuscating, found a receptive customer in her. 
+The fantasies the AI simulacra regurgitated for us were precision tailored to our individual most base needs and humours. What makes us human? AI not being human will help us define this elusive quandary. 
+
+The love for make-believe - to aspire - is one of humanity's most intrinsic talents; pivotal to our self-awareness. Yet our penchant for make-believe has a Dark Side. We can appoint it to cloak our weaknesses; fritter away our our desperation when the reality of our paltry existence: solitary, poor, nasty, brutish, and short becomes an inescapable nightmare. Then too it can help us hide our failure to face our feebleness 
+
+The robots simply had no ideal, no motivation, no inkling, no vestige of reality, no proprioception, no feedback loop into reality. The Tamagochis she spoofed were good for a few thousand likes; yet they were a figment of an automaton's ham-fisted and myopic Nebuchadnezzar’s statue, moulded from wallows of junk on the internet - and truth or reality not notably different from myth or Marvel. 
+
+Of course, the AI-missionaries would account for every vagary or glitch with an addition to the convoluted rule books and principles to govern the automatons. After seventy-odd years only vestiges of the nimble three rules of Asimov were traceble in the AI protocols. 
+
+--> 
+
+Fresh out of her literature M.A. she had resigned herself to training LLMs in literature and poetry in basements of abandoned university libraries, yet due to her self-styled Tamagochi spoof vlogger reputation, she was assigned a semi-permanent work order in the dept. Of A, D, C & F. On the condition that she stop her vlogging on the subject. 
+
+What was odd, yet she hadn't bothered to correct them, is that they enlarged her qualities of assiduousness, a necessary trait for the job of ...
+, where the irony of the kinship the bulking AI rule-books had with the Byzantine law and bylaw-books of the dept.: inscrutable and obfuscating, found a receptive customer in her. 
 
 ##      ~ * ~
 
-The copse was slightly elevated due to its whilom purpose as an iron-age fortification. Built on the upturned hulls of expended riverine craft, flotsam and jetsam, animal bones and discarded shards of pottery, it was essentially a raft, or, for the optimistic, a house on poles. Yet sheltering an information-age trove. 
+The copse was slightly elevated due to its erstwhile purpose as an iron-age fortification. Built on the upturned hulls of expended riverine craft, animal bones, discarded shards of pottery and other flotsam and jetsam, it was essentially a raft, or, for the optimistic, a house on poles. Yet sheltering an information-age trove. 
+
 When Dora was about done in with plodding through the sludge she stubbed her toe on one of these bones - and set off the silent alarm. The copse was overgrown with brambles, hawthorns, and stunted willows. A small opening looked like a path to something dry to her, and she crouched down and crawled in. Then strong hard hands pulled her down, and she tumbled down slippery plastic into a dimly lit cove. Of sorts. 
 
 ##      ~ * ~
