Refactored Chapter III for improved readability and intro Ms Dolores Lasterar
Revised narrative for clarity and flow, adjusting sentence structure and word choice throughout the chapter.

--- a/manuscript/03.md
+++ b/manuscript/03.md
@@ -3,7 +3,9 @@
 
 The machines.
 
-Dora had never been a Luddite; quite the contrary. She embraced AI the second it became free of charge (never mind the incessant product placement). Vlogging 10-20 hours a week (a clunky satire on Tamagochis) and harvesting swathes of followers and a reputation - yet her enjoyment was skin-deep - something was off. About twelve months before, happy chappy chirpiness had been exuded by all those who contracted AI: whether their bank accounts were glutted with too many zeroes or just poor punters. It was the witless rubbernecking that bothered her. It made her old elbow fracture ache. 
+Dora had never been a Luddite; quite the contrary. She embraced AI the second it became free of charge (never mind the incessant product placement). Vlogging 10-20 hours a week (a clunky satire on Tamagochis) and harvesting swathes of followers and a reputation - her enjoyment was skin-deep. Something was off. 
+
+Only twelve months earlier, happy chappy chirpiness had been exuded by all those who contracted AI: whether their bank accounts were glutted with too many zeroes or just poor punters. It was the witless rubbernecking that bothered her. It made her old elbow fracture ache. 
 
 Brace yourself, winter is coming. 
 
@@ -21,10 +23,16 @@ Of course, the AI-missionaries would account for every vagary or glitch with an 
 
 --> 
 
-Fresh out of her literature M.A. she had resigned herself to training LLMs in literature and poetry in basements of abandoned university libraries, yet due to her self-styled Tamagochi spoof vlogger reputation, she was assigned a semi-permanent work order in the dept. Of A, D, C & F. On the condition that she stop her vlogging on the subject. 
+Fresh out of her literature M.A. she had resigned herself to a bleak cognitariat occupation of training LLMs in literature and poetry in basements of abandoned university libraries. Who was to have predicted that her infatuation with spoofing Tamagochi would lead to a job interview with the uber-stuffy Ministry of Taxes & Records? 
 
-What was odd, yet she hadn't bothered to correct them, is that they enlarged her qualities of assiduousness, a necessary trait for the job of ...
+The job interview was for a semi-permanent work order in the aforementioned department of _Audits, Double and Crosschecks & Files_ (the dept. of A, D, C & F for short). The bubbly HR ensign, Ms. Dolores Lasterar, evidently had no idea what the job entailed, and could barely read out the tasks: "improving infallibility of records ... de-mystifying historical events ... objectifying sentimental causes..."
+
+Her wild enthusioasm at this stroke of luck was doused by the condition that she stop her vlogging instantly. Ms.Lasterar, had seemingly mistaken Dora's exuberance for vlogging with conscientiousness and diligence for recording historical documents. Dora felt it was wise to refrain from correcting her - not only because Ms. Lasterar looked like she might breakdown crying at the slightest affront and she felt sorry for her being completely out of her league, but also because Dora's presumed assiduousness seemed a key requisite for getting this cool job - de-obfuscating the Lawbooks; from what she could gather. And the pay included ample grog and better fare so that was a no-brainer. 
+
+Yet her elbow fracture had throbbed all throughout the interview. 
+<!--
 , where the irony of the kinship the bulking AI rule-books had with the Byzantine law and bylaw-books of the dept.: inscrutable and obfuscating, found a receptive customer in her. 
+-->
 
 ##      ~ * ~
 
