Revise interview scene with Dora and Ms. Lasterar
Dora's enthusiasm for a job opportunity is dampened by the requirement to stop vlogging. The interview reveals misconceptions about her vlogging as a sign of diligence, while she considers the job's perks.

--- a/manuscript/03.md
+++ b/manuscript/03.md
@@ -27,7 +27,13 @@ Fresh out of her literature M.A. she had resigned herself to a bleak cognitariat
 
 The job interview was for a semi-permanent work order in the aforementioned department of _Audits, Double and Crosschecks & Files_ (the dept. of A, D, C & F for short). The bubbly HR ensign, Ms. Dolores Lasterar, evidently had no idea what the job entailed, and could barely read out the tasks: "improving infallibility of records ... de-mystifying historical events ... objectifying sentimental causes..."
 
-Her wild enthusioasm at this stroke of luck was doused by the condition that she stop her vlogging instantly. Ms.Lasterar, had seemingly mistaken Dora's exuberance for vlogging with conscientiousness and diligence for recording historical documents. Dora felt it was wise to refrain from correcting her - not only because Ms. Lasterar looked like she might breakdown crying at the slightest affront and she felt sorry for her being completely out of her league, but also because Dora's presumed assiduousness seemed a key requisite for getting this cool job - de-obfuscating the Lawbooks; from what she could gather. And the pay included ample grog and better fare so that was a no-brainer. 
+Dora's wild enthusiasm at this one in a million opportunity was abruptly doused by the condition that she stop her vlogging instantly. Doable, her followers had been lured away to the next fad (AI generated spaghetti eating frogs). 
+
+The interview continued amically, the ladies sipping their tepid teas in seaweed cups. On the subject of Ms. Olivetti's fit for the role, Ms. Lasterar curiously labeled Dora's childlike exuberant vlogging as "manifest... uh, conscientiousness and diligence for recording historical documents" reading from the prepped dossier. 
+
+Some instinct refrained Dora from correcting Ms. Lastarar's misconception - not only because the likeable brunette shuffled on her seat and was rather red in the face what with all the fancy words she had to read and any affront might cause her to break down in tears - but because being presumed meticulous seemed a key requisite for getting this bonanza of a job. Though it was hard to tell what the job really entailed because of Ms. Lasterar's botched rendition. 
+
+"Fiddlesticks," thought Dora, "consider the perks of ample grog and B2-grade lunch thrown in, a no-brainer yo!" and Dora Olivetty signed her bureaucratic DocuCommit then and there. 
 
 Yet her elbow fracture had throbbed all throughout the interview. 
 <!--
